--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: "Open Sans", sans-serif;
+}
+
+.mat-mdc-checkbox .mdc-form-field {
+  color: #000 !important;
+}
+
+.mat-mdc-checkbox.mat-accent {
+  --mdc-checkbox-selected-checkmark-color: unset !important;
+  --mdc-checkbox-selected-focus-icon-color: unset !important;
+  --mdc-checkbox-selected-hover-icon-color: unset !important;
+  --mdc-checkbox-selected-icon-color: unset !important;
+  --mdc-checkbox-selected-pressed-icon-color: unset !important;
+  --mdc-checkbox-unselected-focus-icon-color: unset !important;
+  --mdc-checkbox-unselected-hover-icon-color: unset !important;
+  --mdc-checkbox-disabled-selected-icon-color: unset !important;
+  --mdc-checkbox-disabled-unselected-icon-color: unset !important;
+  --mdc-checkbox-unselected-icon-color: unset !important;
+  --mdc-checkbox-unselected-pressed-icon-color: unset !important;
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    margin: 0px 256px;
+  }
+}
